Fix issue with dependency exclusions in pom-debloated.xml