@@ -2,7 +2,6 @@ package se.kth.depclean.core;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import se.kth.depclean.core.analysis.model.DebloatedDependency;
@@ -21,15 +20,14 @@ public abstract class AbstractDebloater<T> {
    * Writes the debloated config file down.
    */
   public void write() throws IOException {
-    log.info("Starting debloating file");
+    log.info("Starting debloating POM file...");
     logChanges();
-    setDependencies(analysis.getDebloatedDependencies().stream()
-        .map(this::toProviderDependency)
-        .collect(Collectors.toList()));
-
-    if (log.isDebugEnabled()) {
-      logDependencies();
-    }
+    setDependencies(
+        analysis.getUsedDependencies().stream()
+            .map(this::toProviderDependency)
+            .toList()
+    );
+    logDependencies();
     postProcessDependencies();
     writeFile();
   }
@@ -43,27 +41,33 @@ public abstract class AbstractDebloater<T> {
   protected abstract void logDependencies();
 
   /**
-   * In order to keep the version as variable (property) for dependencies that were declared as such, post-process
-   * dependencies to replace interpolated version with the initial one.
+   * In order to keep the version as variable (property) for dependencies that were declared as such,
+   * post-process dependencies to replace interpolated version with the initial one.
    */
   protected abstract void postProcessDependencies();
 
   private void logChanges() {
     if (analysis.hasUsedTransitiveDependencies()) {
-      final int dependencyAmount = analysis.getUsedTransitiveDependencies().size();
+      final int nbUsedTransitiveDeps = analysis.getUsedTransitiveDependencies().size();
       log.info("Adding {} used transitive {} as direct {}.",
-          dependencyAmount, getDependencyWording(dependencyAmount), getDependencyWording(dependencyAmount));
+          nbUsedTransitiveDeps,
+          getDependencyWording(nbUsedTransitiveDeps),
+          getDependencyWording(nbUsedTransitiveDeps)
+      );
     }
-
     if (analysis.hasUnusedDirectDependencies()) {
-      final int dependencyAmount = analysis.getUnusedDirectDependencies().size();
-      log.info("Removing {} unused direct {}.", dependencyAmount, getDependencyWording(dependencyAmount));
+      final int nbUnusedDirectDeps = analysis.getUnusedDirectDependencies().size();
+      log.info("Removing {} unused direct {}.",
+          nbUnusedDirectDeps,
+          getDependencyWording(nbUnusedDirectDeps)
+      );
     }
-
     if (analysis.hasUnusedTransitiveDependencies()) {
-      final int dependencyAmount = analysis.getUnusedTransitiveDependencies().size();
-      log.info(
-          "Excluding {} unused transitive {} one-by-one.", dependencyAmount, getDependencyWording(dependencyAmount));
+      final int nbUnusedTransitiveDeps = analysis.getUnusedTransitiveDependencies().size();
+      log.info("Excluding {} unused transitive {} one-by-one.",
+          nbUnusedTransitiveDeps,
+          getDependencyWording(nbUnusedTransitiveDeps)
+      );
     }
   }
 
